2016-07-26  Per Bothner  <per@bothner.com>

	Rename Paintable to Picture.

2016-07-26  Per Bothner  <per@bothner.com>

	Re-implement conversion to SVG without using external library.
	* PictureVisitor.java: New visitor class.
	* PictureToSvg.java: New class, extends PictureVisitor.
	* SVGUtils.java: Simplify to use PictureToSvg.
	* Paintable.java (visit): New abstract method.
	* DrawImage.java (visit): New visit method.
	* DrawShape.java (visit): Likewise.
	* FillShape.java (visit): Likewise.
	* PBox.java (visit): Likewise.
	* WithComposite.java (visit): Likewise.
	* WithPaint.java (visit): Likewise.
	* WithTransform.java (visit): Likewise.
	* FillShape.java (getShape): New method.
	* PBox.java (paintables): Rename field to children.
	* WithComposite.java (paintables): Rename to children.
	* StandardColor.java (getName): New method.

2016-07-22  Per Bothner  <per@bothner.com>

	* WithComposite.java: Use symbol as shorthand for standard Composites.

2016-07-19  Per Bothner  <per@bothner.com>

	* StandardColor.java: Don't hyphenate or camel-case goldenrod.

2016-07-18  Per Bothner  <per@bothner.com>

	* SVGUtils.java: Clean up and fix PreProcess problems.

	* StandardColor.java: New class.
	* PBox.java (makeZBox): New factory method.

2016-07-15  Per Bothner  <per@bothner.com>

	* PBox.java (makeHBox, makeVBox): Generalize to Images and Shapes.
	(asPaintable, asPaintableAll): Helper methods.

2016-07-13  Per Bothner  <per@bothner.com>

	* DrawImage.java: Now implements RenderedImage.
	* PBox.java: New class for combining Paintables.
	* WithTransform.java (identityTransform): New constant.

	* SVGUtils.java: Remove undesuirable translation.

	* SVGUtils.java: Re-write to use VectorGraphics2D library
	instead of JFreeSVG.

2015-12-21  Per Bothner  <per@bothner.com>

	* SVGUtils.java: New file.
	(toSVG): New method, conditionalized on with:JFreeSVG.

2015-07-31  Per Bothner  <per@bothner.com>

	* Text.java (<init>): Update for  CharBuffer changes.
